<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>unifreiburg</groupId>
	<artifactId>kg_agnostic_el</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>kg_agnostic_el</name>

	<properties>
		<!-- GERBIL properties - START -->
		<!-- prev version 3.7.0 -->
		<jena.version>3.10.0</jena.version>
		<!-- GERBIL properties - END -->

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<dbpedia.spotlight.version>0.7.1</dbpedia.spotlight.version>

		<java.compiler.version>1.8</java.compiler.version>
		<scala.compiler.version>2.9.2</scala.compiler.version>
		<lucene.version>3.6.0</lucene.version>
		<jersey.version>1.10</jersey.version>

		<heapspace.Xmx.compiler>-Xmx2g</heapspace.Xmx.compiler>
		<heapspace.Xmx.indexer>-Xmx2g</heapspace.Xmx.indexer>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<spotlight.basedir>${project.basedir}</spotlight.basedir>
		<guava.version>21.0</guava.version>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<!-- Builds an exec jar w/ all dependencies included -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>bmw.annprocessor.Launcher</mainClass>
						</manifest>
					</archive>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<configuration>
					<downloadSources>true</downloadSources>
					<downloadJavadocs>true</downloadJavadocs>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.12.4</version>
				<configuration>
					<skipTests>true</skipTests>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<!-- GERBIL repositories - START -->
	<repositories>
		<repository>
			<id>maven.aksw.internal</id>
			<name>University Leipzig, AKSW Maven2 Repository</name>
			<url>http://maven.aksw.org/repository/internal</url>
		</repository>
		<repository>
			<id>maven.aksw.snapshots</id>
			<name>University Leipzig, AKSW Maven2 Repository</name>
			<url>http://maven.aksw.org/repository/snapshots</url>
		</repository>
	</repositories>
	<!-- GERBIL repositories - END -->

	<dependencies>
		<!-- https://mvnrepository.com/artifact/org.json/json -->
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20180130</version>
		</dependency>
		<dependency>
			<groupId>org.apache.jena</groupId>
			<artifactId>apache-jena-libs</artifactId>
			<type>pom</type>
			<version>2.13.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/javax.xml/jaxrpc-api -->
		<dependency>
			<groupId>javax.xml</groupId>
			<artifactId>jaxrpc-api</artifactId>
			<version>1.1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
			<version>2.3.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>1.11.3</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.jena/jena-tdb -->
		<dependency>
			<groupId>org.apache.jena</groupId>
			<artifactId>jena-tdb</artifactId>
			<version>${jena.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.jena/jena -->
		<dependency>
			<groupId>org.apache.jena</groupId>
			<artifactId>jena</artifactId>
			<version>${jena.version}</version>
			<type>pom</type>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.jena/jena-core -->
		<dependency>
			<groupId>org.apache.jena</groupId>
			<artifactId>jena-core</artifactId>
			<version>${jena.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-collections4 -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-collections4</artifactId>
			<version>4.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.11.2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.11.2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j-impl</artifactId>
			<version>2.11.2</version>
		</dependency>
		<!-- <dependency> <groupId>tr.com.srdc</groupId> <artifactId>virt-jena</artifactId> 
			<version>2.6.2-srdc</version> </dependency> -->
		<!-- CrummyMatch dependencies -->

		<dependency>
			<groupId>org.apache.opennlp</groupId>
			<artifactId>opennlp-maxent</artifactId>
			<version>3.0.3</version>
		</dependency>

		<dependency>
			<groupId>org.apache.opennlp</groupId>
			<artifactId>opennlp-tools</artifactId>
			<version>1.5.3</version>
		</dependency>

		<dependency>
			<groupId>org.semanticweb.yars</groupId>
			<artifactId>nxparser</artifactId>
			<version>1.2.10</version>
		</dependency>

		<dependency>
			<groupId>commons-cli</groupId>
			<artifactId>commons-cli</artifactId>
			<version>1.2</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>25.1-jre</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.syncthemall/boilerpipe -->
		<dependency>
			<groupId>com.syncthemall</groupId>
			<artifactId>boilerpipe</artifactId>
			<version>1.2.2</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/net.sf.jung/jung-graph-impl -->
		<dependency>
			<groupId>net.sf.jung</groupId>
			<artifactId>jung-graph-impl</artifactId>
			<version>2.1.1</version>
		</dependency>

		<!-- PageRankRDF Dependencies -->
		<dependency>
			<groupId>eu.wdaqua</groupId>
			<artifactId>hdt-java-core</artifactId>
			<version>2.1</version>
		</dependency>
		<dependency>
			<groupId>eu.wdaqua</groupId>
			<artifactId>hdt-jena</artifactId>
			<version>2.1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.beust/jcommander -->
		<dependency>
			<groupId>com.beust</groupId>
			<artifactId>jcommander</artifactId>
			<version>1.69</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.8.2</version>
			<scope>test</scope>
		</dependency>

		<!-- Independent project on gephi graph to latex -->
		<!-- https://mvnrepository.com/artifact/net.sf.opencsv/opencsv -->
		<dependency>
			<groupId>net.sf.opencsv</groupId>
			<artifactId>opencsv</artifactId>
			<version>2.3</version>
		</dependency>

		<!-- NPComplete's jar downloaded from http://people.aifb.kit.edu/mfa/RBBNPE-RuleBasedBaseNounPhraseExtractionv2.zip -->
		<!-- Tagger @ http://people.aifb.kit.edu/mfa/datasets/english-left3words-distsim.tagger -->
		<!-- Tagger to be placed in whichever directory is called upon POSBasedBaseNounPhraseExtractor 
			instantiation -->
		<!-- <dependency> <groupId>RBBNPE</groupId> <artifactId>RBBNPE-RuleBasedBaseNounPhraseExtraction</artifactId> 
			<version>0.0.1-SNAPSHOT</version> <scope>system</scope> <#!#-#-#- <systemPath>${project.basedir}/../rbbnpe_libs/npcomplete.jar</systemPath> 
			#-#-#># <systemPath>${project.basedir}/lib/npcomplete.jar</systemPath> </dependency> -->
		<!-- Stanford dependency required for use of NPComplete -->
		<!-- https://mvnrepository.com/artifact/edu.stanford.nlp/stanford-corenlp -->
		<dependency>
			<groupId>edu.stanford.nlp</groupId>
			<artifactId>stanford-corenlp</artifactId>
			<version>3.6.0</version>
		</dependency>
		<dependency>
			<groupId>info.debatty</groupId>
			<artifactId>java-lsh</artifactId>
			<version>RELEASE</version>
		</dependency>
		<!-- External sorting -->
		<dependency>
			<groupId>com.google.code.externalsortinginjava</groupId>
			<artifactId>externalsortinginjava</artifactId>
			<version>[0.1.9,)</version>
		</dependency>

		<!-- These do not have a Maven repository -->
		<!-- <dependency> <groupId>com.openlink.virtuoso</groupId> <artifactId>virtjdbc4</artifactId> 
			<version>4.0</version> </dependency> -->
		<!-- <dependency> <groupId>com.openlink.virtuoso</groupId> <artifactId>virt_jena3</artifactId> 
			<version>3.0</version> </dependency> -->
		<!-- JENA ARQ for HTTP queries -->
		<!-- https://mvnrepository.com/artifact/org.apache.jena/jena-arq -->
		<dependency>
			<groupId>org.apache.jena</groupId>
			<artifactId>jena-arq</artifactId>
			<!-- prev version: 3.10.0 -->
			<version>${jena.version}</version>
		</dependency>

		<!-- GERBIL Dependency -->
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.4</version>
		</dependency>
		<!-- ~~~~~~~~~~~~~~~~~~~ Lucene for Indexing ~~~~~~~~~~~~~~~~~~~~~~ -->
		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-core</artifactId>
			<version>4.4.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-queryparser</artifactId>
			<version>4.4.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-analyzers-common</artifactId>
			<version>4.4.0</version>
		</dependency>
		<!-- Used for N-Gram Similarity -->
		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-spellchecker</artifactId>
			<version>3.6.2</version>
		</dependency>
		<!-- ~~~~~~~~~~~~~~~~~~~ End Lucene for Indexing ~~~~~~~~~~~~~~~~~~~~~~ -->
		<dependency>
			<groupId>org.apache.solr</groupId>
			<artifactId>solr-lucene-core</artifactId>
			<version>1.3.0</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>com.github.haifengl</groupId>
			<artifactId>smile-nlp</artifactId>
			<version>1.2.0</version>
		</dependency>
		<!-- Validator stuff -->
		<!-- https://mvnrepository.com/artifact/commons-validator/commons-validator -->
		<dependency>
			<groupId>commons-validator</groupId>
			<artifactId>commons-validator</artifactId>
			<version>1.6</version>
		</dependency>
	</dependencies>
</project>